Almost finished with Members Only Events page.

--- a/css/style.css
+++ b/css/style.css
@@ -12157,14 +12157,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(1) {
   z-index: 10;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(1):before {
   content: "1";
 }
 .slyde:nth-child(1).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12179,14 +12179,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(2) {
   z-index: 9;
-  transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(2):before {
   content: "2";
 }
 .slyde:nth-child(2).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(0deg) translate(-50%, -15rem);
+  transform: rotate(3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12223,14 +12223,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(4) {
   z-index: 7;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(4):before {
   content: "4";
 }
 .slyde:nth-child(4).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
+  transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12245,14 +12245,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(5) {
   z-index: 6;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(5):before {
   content: "5";
 }
 .slyde:nth-child(5).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12267,14 +12267,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(6) {
   z-index: 5;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(6):before {
   content: "6";
 }
 .slyde:nth-child(6).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12289,14 +12289,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(7) {
   z-index: 4;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(7):before {
   content: "7";
 }
 .slyde:nth-child(7).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
+  transform: rotate(3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12333,14 +12333,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(9) {
   z-index: 2;
-  transform: rotate(-1deg) translate(-50%, -50%);
+  transform: rotate(-3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(9):before {
   content: "9";
 }
 .slyde:nth-child(9).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-1deg) translate(-50%, -15rem);
+  transform: rotate(-3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12355,14 +12355,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(10) {
   z-index: 1;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(10):before {
   content: "10";
 }
 .slyde:nth-child(10).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -22251,7 +22251,7 @@ section.perks .container .row [class*=col] .single-solution-style-one:hover {
   padding-bottom: 0rem;
 }
 .members-only-events-page-body .event-wrapper {
-  padding: 15rem 0;
+  padding: 17rem 0;
 }
 .members-only-events-page-body .event-wrapper .career-banner-wrapper p:not(:last-of-type) {
   margin-bottom: 2rem;
@@ -22267,8 +22267,68 @@ section.perks .container .row [class*=col] .single-solution-style-one:hover {
   font-size: 45px;
   margin-left: -3px;
 }
+.members-only-events-page-body .event-wrapper .career-banner-wrapper hr {
+  margin-top: 3rem;
+}
 .members-only-events-page-body .event-wrapper .event-image-main {
   height: 600px;
+}
+.members-only-events-page-body .event-wrapper .thumbnail-top {
+  position: relative;
+}
+.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box {
+  overflow: hidden;
+  position: absolute;
+  bottom: 3rem;
+  left: 7rem;
+  padding: 2.5rem 4rem 3rem 4rem;
+  background: rgba(36, 138, 74, 0.196);
+  backdrop-filter: blur(16px);
+  border-radius: 32px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box .masters-logo {
+  width: 100px;
+  height: auto;
+}
+.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.match-play {
+  bottom: unset;
+  left: unset;
+  top: 4rem;
+  right: 10rem;
+  padding: 0 20px 5px 20px;
+  background: black;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 20px 25px -5px, rgba(0, 0, 0, 0.09) 0px 10px 10px -5px;
+}
+.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.match-play .match-play-logo {
+  width: 175px;
+}
+.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.fourth {
+  background: unset;
+  backdrop-filter: unset;
+  box-shadow: unset;
+  border-radius: unset;
+  overflow: visible;
+  border: unset;
+  left: 2rem;
+  bottom: 2rem;
+}
+.members-only-events-page-body .event-wrapper .thumbnail-top .event-image-box.fourth .fourth-flags {
+  width: 250px;
+  filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.07)) drop-shadow(0 4px 4px rgba(0, 0, 0, 0.08)) drop-shadow(0 8px 8px rgba(0, 0, 0, 0.09)) drop-shadow(0 16px 16px rgba(0, 0, 0, 0.1)) drop-shadow(0 32px 32px rgba(0, 0, 0, 0.11));
+}
+.members-only-events-page-body .event-wrapper.match-play-event-wrapper {
+  background: rgb(241, 241, 241);
+}
+.members-only-events-page-body .event-wrapper.match-play-event-wrapper .event-image-main {
+  height: 700px;
+}
+.members-only-events-page-body .event-wrapper.fourth-wrapper {
+  background: #f7f7f7;
+}
+.members-only-events-page-body .event-wrapper.fourth-wrapper .event-image-main {
+  height: 700px;
 }
 
 .sponsorship-cta {
@@ -22276,7 +22336,7 @@ section.perks .container .row [class*=col] .single-solution-style-one:hover {
   padding: 10rem 0 12rem;
 }
 .sponsorship-cta .container .handshake-sticker {
-  width: 105px;
+  width: 100px;
   height: auto;
   margin-bottom: 2rem;
 }
@@ -22292,14 +22352,14 @@ section.perks .container .row [class*=col] .single-solution-style-one:hover {
 }
 .sponsorship-cta .container .rts-btn {
   margin-top: 5rem;
-  background: #deeefa;
+  background: #c9e4f8;
   color: black;
   border: none;
   padding: 17px 21px;
   letter-spacing: 0.2px;
 }
 .sponsorship-cta .container .rts-btn:after {
-  background: #c9e4f8;
+  background: #b4d9f6;
   width: 250px;
 }
 
