--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -1428,7 +1428,7 @@ section.perks {
   padding-top: 0rem;
   padding-bottom: 0rem;
   .event-wrapper {
-    padding: 15rem 0;
+    padding: 17rem 0;
     // & > .row {
     //   gap: 3rem;
     // }
@@ -1449,9 +1449,77 @@ section.perks {
         font-size: 45px;
         margin-left: -3px;
       }
+      hr {
+        margin-top: 3rem;
+      }
     }
     .event-image-main {
       height: 600px;
+    }
+    .thumbnail-top {
+      position: relative;
+      .event-image-box {
+        overflow: hidden;
+        position: absolute;
+        bottom: 3rem;
+        left: 7rem;
+        padding: 2.5rem 4rem 3rem 4rem;
+        background: rgba(36, 138, 74, 0.196);
+        backdrop-filter: blur(16px);
+        border-radius: 32px;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+          rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+        .masters-logo {
+          width: 100px;
+          height: auto;
+        }
+        &.match-play {
+          bottom: unset;
+          left: unset;
+          top: 4rem;
+          right: 10rem;
+          padding: 0 20px 5px 20px;
+          background: black;
+          box-shadow: rgba(0, 0, 0, 0.3) 0px 20px 25px -5px,
+            rgba(0, 0, 0, 0.09) 0px 10px 10px -5px;
+          .match-play-logo {
+            width: 175px;
+          }
+        }
+
+        &.fourth {
+          background: unset;
+          backdrop-filter: unset;
+          box-shadow: unset;
+          border-radius: unset;
+          overflow: visible;
+          border: unset;
+          left: 2rem;
+          bottom: 2rem;
+          .fourth-flags {
+            width: 250px;
+            filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06))
+              drop-shadow(0 2px 2px rgba(0, 0, 0, 0.07))
+              drop-shadow(0 4px 4px rgba(0, 0, 0, 0.08))
+              drop-shadow(0 8px 8px rgba(0, 0, 0, 0.09))
+              drop-shadow(0 16px 16px rgba(0, 0, 0, 0.1))
+              drop-shadow(0 32px 32px rgba(0, 0, 0, 0.11));
+          }
+        }
+      }
+    }
+    &.match-play-event-wrapper {
+      background: rgb(241 241 241);
+      .event-image-main {
+        height: 700px;
+      }
+    }
+    &.fourth-wrapper {
+      background: #f7f7f7;
+      .event-image-main {
+        height: 700px;
+      }
     }
   }
 }
@@ -1461,7 +1529,7 @@ section.perks {
   padding: 10rem 0 12rem;
   .container {
     .handshake-sticker {
-      width: 105px;
+      width: 100px;
       height: auto;
       margin-bottom: 2rem;
     }
@@ -1477,14 +1545,14 @@ section.perks {
     }
     .rts-btn {
       margin-top: 5rem;
-      background: #deeefa;
+      background: #c9e4f8;
       color: black;
       border: none;
       padding: 17px 21px;
       letter-spacing: 0.2px;
 
       &:after {
-        background: #c9e4f8;
+        background: #b4d9f6;
         width: 250px;
       }
     }
